[gd_scene load_steps=13 format=3 uid="uid://crg1v38g3407v"]

[ext_resource type="Script" uid="uid://ci6h5tiikydn1" path="res://common/ui/overlays/upgrade_overlay/weapon_upgrade_container.gd" id="1_j4e3j"]
[ext_resource type="Script" uid="uid://bh4tkgx1mt701" path="res://common/ui/overlays/upgrade_overlay/weapon_upgrade_config.gd" id="2_o8esf"]
[ext_resource type="Script" uid="uid://ddtgra06qolko" path="res://addons/animated_texture_rect/animated_texture_rect.gd" id="3_rywcc"]
[ext_resource type="Texture2D" uid="uid://brxpp54hlktjr" path="res://common/art/weapons/sword/anim_sword_idle.png" id="4_bq6kw"]
[ext_resource type="PackedScene" uid="uid://kjf6gpexy1jl" path="res://common/ui/overlays/upgrade_overlay/weapon_upgrade_row.tscn" id="4_j4e3j"]
[ext_resource type="SpriteFrames" uid="uid://cn65d0mc2r6x" path="res://animations/anim_sword.tres" id="5_m3hpt"]
[ext_resource type="Texture2D" uid="uid://ruh1fc2bkc2s" path="res://common/ui/overlays/upgrade_overlay/art/ui_sword_damage_upgrade_icon.png" id="5_mrmlm"]
[ext_resource type="Texture2D" uid="uid://d1etk7ie7d7ih" path="res://common/ui/overlays/upgrade_overlay/art/ui_sword_health_upgrade_icon.png" id="5_o8esf"]
[ext_resource type="Texture2D" uid="uid://bv0ewarq4ho2h" path="res://common/ui/overlays/upgrade_overlay/art/ui_sword_speed_upgrade_icon.png" id="6_m3hpt"]
[ext_resource type="Texture2D" uid="uid://bdqwokbch4hfd" path="res://common/ui/overlays/upgrade_overlay/art/ui_sword_attack_speed_upgrade_icon.png" id="7_umjpb"]

[sub_resource type="Resource" id="Resource_u4mup"]
script = ExtResource("2_o8esf")
health = 0
speed = 0
damage = 0
attack_speed = 0
metadata/_custom_type_script = ExtResource("2_o8esf")

[sub_resource type="AtlasTexture" id="AtlasTexture_5ipg6"]
atlas = ExtResource("4_bq6kw")
region = Rect2(512, 0, 512, 512)

[node name="WeaponUpgradeUiContainer" type="MarginContainer"]
script = ExtResource("1_j4e3j")
sprite_frames = ExtResource("5_m3hpt")
weapon_upgrade_config = SubResource("Resource_u4mup")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="WeaponFeatureImage" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_5ipg6")
expand_mode = 3
stretch_mode = 5
script = ExtResource("3_rywcc")
sprites = ExtResource("5_m3hpt")
current_animation = "idle"
frame_index = 1
auto_play = true
playing = true
metadata/_custom_type_script = ExtResource("3_rywcc")

[node name="HealthRow" parent="VBoxContainer" instance=ExtResource("4_j4e3j")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("5_o8esf")

[node name="PowerRow" parent="VBoxContainer" instance=ExtResource("4_j4e3j")]
visible = false
layout_mode = 2
icon = ExtResource("5_mrmlm")

[node name="SpeedRow" parent="VBoxContainer" instance=ExtResource("4_j4e3j")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("6_m3hpt")

[node name="AttackSpeedRow" parent="VBoxContainer" instance=ExtResource("4_j4e3j")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("7_umjpb")
